<resources>
    <string name="app_name">Corner Pocket</string>
    <string name="select_opponent">Select opponent</string>
    <string name="game_review">Game \nreview</string>
    <string name="english">English</string>
    <string name="american">American</string>
    <string name="random">Random</string>
    <string name="who_won">Who won?</string>
    <string name="method_of_victory">METHOD OF VICTORY</string>
    <string name="balls_played">Balls played</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="spot">Spots</string>
    <string name="stripe">Stripes</string>
    <string name="game_duration">Game duration</string>
    <string name="vs">Vs</string>
    <string name="winner_via">Winner via:</string>
    <string name="record">Record</string>
    <string name="broke">Broke</string>
    <string name="main_menu">Main menu</string>
    <string name="na">NA</string>
    <string name="start_game">Start game</string>
    <string name="finish_game">Finish game</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="image_description">Image</string>
    <string name="settings_icon">Settings icon</string>
    <string name="profile_icon">Profile icon</string>
    <string name="profile_icon_red">Red profile icon</string>
    <string name="user_icon_blue">Blue user icon</string>
    <string name="opponent_icon_purple">Purple opponent icon</string>
    <string name="back_icon">Back icon</string>
    <string name="logo">Logo</string>
    <string name="selected_bar">Selected bar</string>
    <string name="unselected_bar">Unselected bar</string>
    <string name="english_rack">English rack</string>
    <string name="american_rack">American rack</string>
    <string name="break_icon">Break icon</string>
    <string name="random_icon">Random icon</string>
    <string name="quit_icon">Quit icon</string>
    <string name="info_icon">Info icon</string>
    <string name="tick">Tick</string>
    <string name="red_ball">Red ball</string>
    <string name="yellow_ball">Yellow ball</string>
    <string name="border">border</string>
    <string name="crown">Crown</string>
    <string name="divider">Divider</string>
    <string name="up_arrow">Up arrow</string>
    <string name="na_img">NA image</string>
    <string name="win_img">Win image</string>
    <string name="loss_img">Loss image</string>
    <string name="recent_game">Recent game result</string>
    <string name="intro_description">Track your results and learn more about your game. Set up yor account now! no email addresses or subscription plans to worry about.</string>
    <string name="welcome">Welcome to\nCorner Pocket</string>
    <string name="make_account">make account</string>
    <string name="profile">My Profile</string>
    <string name="add_picture">Add picture</string>
    <string name="enter_name">Enter Name</string>
    <string name="apply_changes">Apply changes</string>
    <string name="play_game">Play game</string>
    <string name="games_history">Games \nhistory</string>
    <string name="game_statistics">Game \nstatistics</string>
    <string name="game_statistics_flat">Game statistics</string>
    <string name="edit_opponents">Edit\nopponents</string>
    <string name="edit_opponent">Edit opponent</string>
    <string name="edit">Edit</string>
    <string name="rules">Rules</string>
    <string name="donations">Donations</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add_opponent_text">Tap an icon below to select an opponent or add a new opponent by pressing the plus icon in the bottom corner.</string>
    <string name="win_record">Win record</string>
    <string name="last_5_games">Last 5 games</string>
    <string name="add_opponent">Add\nopponent</string>
    <string name="add_opponent_flat">Add opponent</string>
    <string name="game_type">Game type</string>
    <string name="game_type_description">What type of pool is being played?</string>
    <string name="eight_ball">8-Ball</string>
    <string name="nine_ball">9-Ball</string>
    <string name="break_selection">Break selection</string>
    <string name="break_description">Who takes the first shot?</string>
    <string name="quit">Quit</string>
    <string name="game_underway">Game underway</string>
    <string name="game_underway_content">Play your game and finish when you have a winner!</string>
    <string name="game_review_title">Game review</string>
    <string name="game_review_description">Enter some details about your game!</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="filters">Filters</string>
    <string name="statistics">Statistics</string>
    <string name="opponent_list">Opponent list</string>
    <string name="edit_opponent_text">Tap an icon below to edit an opponent or add a new opponent by pressing the plus icon in the bottom corner.</string>
    <string name="leave_review">Leave review</string>
    <string name="make_donation">Make donation</string>
    <string name="game_history">Game history</string>
    <string name="result">Result</string>
    <string name="opponent">Opponent</string>
    <string name="date">Date</string>
    <string name="view">View</string>
    <string name="var_listResults">%1$s result(s)</string>
    <string name="var_opponentsCounter">%1$s opponent(s)</string>
    <string name="var_gameType">Game type : %1$s %2$s</string>
    <string name="var_gameDuration">Game duration : %1$s</string>
    <string name="var_double">%1$s %2$s</string>
    <string name="var_record">%1$s - %2$s</string>
    <string name="var_average_duration">Average game duration : %1$s</string>
    <string name="var_total_duration">Total game duration : %1$s</string>
    <string name="var_percentage">%1$s%%</string>
    <string name="var_games_with">Games with %1$s</string>
    <string name="var_game_time">Game time, %1$s</string>
    <string name="var_delete_opponent">Are you sure you would like to delete %1$s? They and all their games will be permanently deleted.</string>
    <string name="return_to_menu">Return to menu?</string>
    <string name="return_to_menu_content">Are you sure you would like to exit to menu? All progress will be lost.</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="method_of_victory_content">
        The ways to achieve victory in a game of pool can generally be categorized into two scenarios: a legal victory or a win resulting from an opponents foul. While the specifics may vary depending on the game type or the ruleset being followed, the principles typically align as follows: \n\n

        Legal Victory: \n
        &#8226; You successfully pocket all your designated balls, followed by the 8-ball, without committing any fouls, and in accordance with the rules of the game. \n\n

        Opponent Foul: \n
        &#8226; Your opponent pockets the 8-ball prematurely, before clearing all their designated balls. \n
        &#8226; Your opponent causes the 8-ball to jump off the table during play. \n
        &#8226; Your opponent fails to pocket the 8-ball into their declared (called) pocket during their winning shot.
    </string>
    <string name="close">Close</string>
    <string name="delete_game">Delete game?</string>
    <string name="delete_game_content">Are you sure you would like to delete this game? It will be permanently deleted.</string>
    <string name="delete_opponent">Delete opponent?</string>
    <string name="abandon_changes">Abandon changes?</string>
    <string name="unsaved_changes_content">All your changes are currently unsaved, are you sure you want to close?</string>
    <string name="unsaved_changes_content_exit">All your changes are currently unsaved, are you sure you want to exit?</string>
    <string name="add_photo">Add photo</string>
    <string name="add_profile_pic">Add profile picture</string>
    <string name="use_photo_from">"Use photo from: "</string>
    <string name="camera">Camera</string>
    <string name="camera_roll">Camera roll</string>
    <string name="wins">Wins</string>
    <string name="games">Games</string>
    <string name="break_statistics">Break statistics</string>
    <string name="games_breaking">Games\nbreaking</string>
    <string name="losses">losses</string>
    <string name="games_not_breaking">Games <b>NOT</b>\nbreaking</string>
    <string name="ball_statistics">Ball statistics</string>
    <string name="clear_filters">Clear\nfilters</string>
    <string name="both">Both</string>
    <string name="discipline">Discipline</string>
    <string name="results">Results</string>
    <string name="games_breaking_flat">Games breaking</string>
    <string name="me">Me</string>
    <string name="order">Order</string>
    <string name="date_newest_to_oldest">Date: Newest to oldest</string>
    <string name="date_oldest_to_newest">Date: Oldest to newest</string>
    <string name="apply">Apply</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_created">Profile created</string>
    <string name="game_deleted">Game deleted</string>
    <string name="opponent_created">Opponent created</string>
    <string name="game_created">Game created</string>
    <string name="please_enter_a_name">Please enter a name</string>
    <string name="opponent_updated">Opponent updated</string>
    <string name="opponent_deleted">Opponent deleted</string>
    <string name="user_updated">User updated</string>
    <string name="create_account">Create account</string>
    <string name="win">Win</string>
    <string name="loss">Loss</string>
    <string name="all">All</string>
    <string name="select_a_player_to_break">Select a player to break</string>
    <string name="standard_victory">Standard victory</string>
    <string name="opponent_foul">Opponent foul</string>
    <string name="please_fill_in_all_fields">PLEASE FILL IN ALL FIELDS</string>
    <string name="please_select_the_winner_of_the_game">PLEASE SELECT THE WINNER OF THE GAME</string>
    <string name="please_select_the_method_of_victory">PLEASE SELECT THE METHOD OF VICTORY</string>
    <string name="please_select_which_balls_you_played_as">PLEASE SELECT WHICH BALLS YOU PLAYED AS</string>
    <string name="cropping_failed">Cropping failed: %1$s</string>
    <string name="donation_text">
        Thank you for downloading the app! I hope it proves useful to you.\n\n
        A Brief Backstory\n
        Ive had this idea in the back of my mind since my 2nd year of uni in 2019 or so. I learned that going to the pub, playing pool and drinking made it much easier to tolerate people talking to me about computer science.\n\n
        I used to play at least five games a day and I tracked my wins and losses against my mates but started to wonder about some more advanced stats, do I win more when I break? am I better with red balls or yellow balls? etc … and here we are!\n\n
        Support the App\n
        If you’d like to support me, leaving a review (preferably a good one!) would be amazing. It helps me look good to potential employers who might come across this project.\n\n
        If you’d like to go the extra mile, there’s a link below to my Buy Me a Coffee page where you can send a small contribution. Of course, there’s no obligation—your support by just using the app is more than enough!\n\n
        Thanks again, and have a great game!</string>
    <string name="donation_subheading">Hi, I\'m Ryan and I made this app</string>
    <string name="review">Review</string>
    <string name="donate">Donate</string>
    <string name="no_details_updated">No details updated</string>
    <string name="please_wait">Please wait…</string>
    <string name="populating_games_list">Populating games list</string>
</resources>