<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.registration.IntroFragment">

    <ImageView
        android:id="@+id/banner_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/billiards_image"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_description" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/title"
        style="@style/h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jost_bold"
        android:text="@string/welcome"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <TextView
        android:id="@+id/content"
        style="@style/p"
        android:padding="16dp"
        android:text="@string/intro_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="VisualLintLongText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_btn"
        style="@style/mainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_account"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>