<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_purple_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.play.PlayFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topNavigationConstraint"
        style="@style/navigationSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_profile_button"
            style="@style/iconSize"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/profile_icon"
            android:src="@drawable/settings_icon_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_profile_text"
            style="@style/smallCapsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="Settings"
            app:layout_constraintEnd_toEndOf="@+id/user_profile_button"
            app:layout_constraintStart_toStartOf="@+id/user_profile_button"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topNavigationConstraint"
        android:contentDescription="@string/logo"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_game_button"
        style="@style/mainButton"
        android:layout_width="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>